MINIC/MINIC.output
Grammar

    0 $accept: compile_unit $end

    1 compile_unit: statement
    2             | compile_unit statement
    3             | function_definition
    4             | declaration ';'
    5             | compile_unit function_definition
    6             | compile_unit declaration ';'

    7 function_definition: type_specifier IDENTIFIER '(' fargs ')' compound_statement
    8                    | type_specifier IDENTIFIER '(' ')' compound_statement

    9 fargs: declaration
   10      | fargs ',' declaration

   11 declaration: type_specifier IDENTIFIER
   12            | type_specifier IDENTIFIER '=' expression

   13 type_specifier: INT
   14               | FLOAT

   15 statement: expression ';'
   16          | compound_statement
   17          | if_statement
   18          | while_statement
   19          | do_while_statement ';'
   20          | RETURN expression ';'
   21          | BREAK ';'
   22          | CONTINUE ';'
   23          | ';'

   24 compound_statement: '{' '}'
   25                   | '{' statement_list '}'

   26 if_statement: IF '(' expression ')' statement
   27             | IF '(' expression ')' statement ELSE statement

   28 while_statement: WHILE '(' expression ')' statement

   29 do_while_statement: DO statement WHILE '(' expression ')'

   30 statement_list: statement
   31               | statement_list statement

   32 expression: NUMBER
   33           | IDENTIFIER
   34           | IDENTIFIER '(' ')'
   35           | IDENTIFIER '(' args ')'
   36           | expression PLUS expression
   37           | expression MINUS expression
   38           | expression MULT expression
   39           | expression DIV expression
   40           | PLUS expression
   41           | MINUS expression
   42           | '(' expression ')'
   43           | IDENTIFIER '=' expression
   44           | expression AND expression
   45           | expression OR expression
   46           | NOT expression
   47           | expression GT expression
   48           | expression GTE expression
   49           | expression LT expression
   50           | expression LTE expression
   51           | expression EQUAL expression
   52           | expression NEQUAL expression

   53 args: expression
   54     | args ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 8 26 27 28 29 34 35 42
')' (41) 7 8 26 27 28 29 34 35 42
',' (44) 10 54
';' (59) 4 6 15 19 20 21 22 23
'=' (61) 12 43
'{' (123) 24 25
'}' (125) 24 25
error (256)
IDENTIFIER (258) 7 8 11 12 33 34 35 43
INT (259) 13
FLOAT (260) 14
CONTINUE (261) 22
RETURN (262) 20
BREAK (263) 21
IF (264) 26 27
WHILE (265) 28 29
DO (266) 29
NUMBER (267) 32
OR (268) 45
AND (269) 44
NEQUAL (270) 52
EQUAL (271) 51
LTE (272) 50
LT (273) 49
GTE (274) 48
GT (275) 47
MINUS (276) 37 41
PLUS (277) 36 40
DIV (278) 39
MULT (279) 38
NOT (280) 46
IFPREC (281)
ELSE (282) 27


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
compile_unit (36)
    on left: 1 2 3 4 5 6, on right: 0 2 5 6
function_definition (37)
    on left: 7 8, on right: 3 5
fargs (38)
    on left: 9 10, on right: 7 10
declaration (39)
    on left: 11 12, on right: 4 6 9 10
type_specifier (40)
    on left: 13 14, on right: 7 8 11 12
statement (41)
    on left: 15 16 17 18 19 20 21 22 23, on right: 1 2 26 27 28 29
    30 31
compound_statement (42)
    on left: 24 25, on right: 7 8 16
if_statement (43)
    on left: 26 27, on right: 17
while_statement (44)
    on left: 28, on right: 18
do_while_statement (45)
    on left: 29, on right: 19
statement_list (46)
    on left: 30 31, on right: 25 31
expression (47)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52, on right: 12 15 20 26 27 28 29 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 53 54
args (48)
    on left: 53 54, on right: 35 54


State 0

    0 $accept: . compile_unit $end

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CONTINUE    shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    IF          shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16

    compile_unit         go to state 17
    function_definition  go to state 18
    declaration          go to state 19
    type_specifier       go to state 20
    statement            go to state 21
    compound_statement   go to state 22
    if_statement         go to state 23
    while_statement      go to state 24
    do_while_statement   go to state 25
    expression           go to state 26


State 1

   33 expression: IDENTIFIER .
   34           | IDENTIFIER . '(' ')'
   35           | IDENTIFIER . '(' args ')'
   43           | IDENTIFIER . '=' expression

    '='  shift, and go to state 27
    '('  shift, and go to state 28

    $default  reduce using rule 33 (expression)


State 2

   13 type_specifier: INT .

    $default  reduce using rule 13 (type_specifier)


State 3

   14 type_specifier: FLOAT .

    $default  reduce using rule 14 (type_specifier)


State 4

   22 statement: CONTINUE . ';'

    ';'  shift, and go to state 29


State 5

   20 statement: RETURN . expression ';'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 30


State 6

   21 statement: BREAK . ';'

    ';'  shift, and go to state 31


State 7

   26 if_statement: IF . '(' expression ')' statement
   27             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 32


State 8

   28 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 33


State 9

   29 do_while_statement: DO . statement WHILE '(' expression ')'

    IDENTIFIER  shift, and go to state 1
    CONTINUE    shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    IF          shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16

    statement           go to state 34
    compound_statement  go to state 22
    if_statement        go to state 23
    while_statement     go to state 24
    do_while_statement  go to state 25
    expression          go to state 26


State 10

   32 expression: NUMBER .

    $default  reduce using rule 32 (expression)


State 11

   41 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 35


State 12

   40 expression: PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 36


State 13

   46 expression: NOT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 37


State 14

   23 statement: ';' .

    $default  reduce using rule 23 (statement)


State 15

   42 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 38


State 16

   24 compound_statement: '{' . '}'
   25                   | '{' . statement_list '}'

    IDENTIFIER  shift, and go to state 1
    CONTINUE    shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    IF          shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 39

    statement           go to state 40
    compound_statement  go to state 22
    if_statement        go to state 23
    while_statement     go to state 24
    do_while_statement  go to state 25
    statement_list      go to state 41
    expression          go to state 26


State 17

    0 $accept: compile_unit . $end
    2 compile_unit: compile_unit . statement
    5             | compile_unit . function_definition
    6             | compile_unit . declaration ';'

    $end        shift, and go to state 42
    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    FLOAT       shift, and go to state 3
    CONTINUE    shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    IF          shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16

    function_definition  go to state 43
    declaration          go to state 44
    type_specifier       go to state 20
    statement            go to state 45
    compound_statement   go to state 22
    if_statement         go to state 23
    while_statement      go to state 24
    do_while_statement   go to state 25
    expression           go to state 26


State 18

    3 compile_unit: function_definition .

    $default  reduce using rule 3 (compile_unit)


State 19

    4 compile_unit: declaration . ';'

    ';'  shift, and go to state 46


State 20

    7 function_definition: type_specifier . IDENTIFIER '(' fargs ')' compound_statement
    8                    | type_specifier . IDENTIFIER '(' ')' compound_statement
   11 declaration: type_specifier . IDENTIFIER
   12            | type_specifier . IDENTIFIER '=' expression

    IDENTIFIER  shift, and go to state 47


State 21

    1 compile_unit: statement .

    $default  reduce using rule 1 (compile_unit)


State 22

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


State 23

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 24

   18 statement: while_statement .

    $default  reduce using rule 18 (statement)


State 25

   19 statement: do_while_statement . ';'

    ';'  shift, and go to state 48


State 26

   15 statement: expression . ';'
   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60
    ';'     shift, and go to state 61


State 27

   43 expression: IDENTIFIER '=' . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 62


State 28

   34 expression: IDENTIFIER '(' . ')'
   35           | IDENTIFIER '(' . args ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15
    ')'         shift, and go to state 63

    expression  go to state 64
    args        go to state 65


State 29

   22 statement: CONTINUE ';' .

    $default  reduce using rule 22 (statement)


State 30

   20 statement: RETURN expression . ';'
   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60
    ';'     shift, and go to state 66


State 31

   21 statement: BREAK ';' .

    $default  reduce using rule 21 (statement)


State 32

   26 if_statement: IF '(' . expression ')' statement
   27             | IF '(' . expression ')' statement ELSE statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 67


State 33

   28 while_statement: WHILE '(' . expression ')' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 68


State 34

   29 do_while_statement: DO statement . WHILE '(' expression ')'

    WHILE  shift, and go to state 69


State 35

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   41           | MINUS expression .
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    DIV   shift, and go to state 59
    MULT  shift, and go to state 60

    $default  reduce using rule 41 (expression)


State 36

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   40           | PLUS expression .
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    DIV   shift, and go to state 59
    MULT  shift, and go to state 60

    $default  reduce using rule 40 (expression)


State 37

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   46           | NOT expression .
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    $default  reduce using rule 46 (expression)


State 38

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   42           | '(' expression . ')'
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60
    ')'     shift, and go to state 70


State 39

   24 compound_statement: '{' '}' .

    $default  reduce using rule 24 (compound_statement)


State 40

   30 statement_list: statement .

    $default  reduce using rule 30 (statement_list)


State 41

   25 compound_statement: '{' statement_list . '}'
   31 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    CONTINUE    shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    IF          shift, and go to state 7
    WHILE       shift, and go to state 8
    DO          shift, and go to state 9
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    ';'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 71

    statement           go to state 72
    compound_statement  go to state 22
    if_statement        go to state 23
    while_statement     go to state 24
    do_while_statement  go to state 25
    expression          go to state 26


State 42

    0 $accept: compile_unit $end .

    $default  accept


State 43

    5 compile_unit: compile_unit function_definition .

    $default  reduce using rule 5 (compile_unit)


State 44

    6 compile_unit: compile_unit declaration . ';'

    ';'  shift, and go to state 73


State 45

    2 compile_unit: compile_unit statement .

    $default  reduce using rule 2 (compile_unit)


State 46

    4 compile_unit: declaration ';' .

    $default  reduce using rule 4 (compile_unit)


State 47

    7 function_definition: type_specifier IDENTIFIER . '(' fargs ')' compound_statement
    8                    | type_specifier IDENTIFIER . '(' ')' compound_statement
   11 declaration: type_specifier IDENTIFIER .
   12            | type_specifier IDENTIFIER . '=' expression

    '='  shift, and go to state 74
    '('  shift, and go to state 75

    $default  reduce using rule 11 (declaration)


State 48

   19 statement: do_while_statement ';' .

    $default  reduce using rule 19 (statement)


State 49

   45 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 76


State 50

   44 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 77


State 51

   52 expression: expression NEQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 78


State 52

   51 expression: expression EQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 79


State 53

   50 expression: expression LTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 80


State 54

   49 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 81


State 55

   48 expression: expression GTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 82


State 56

   47 expression: expression GT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 83


State 57

   37 expression: expression MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 84


State 58

   36 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 85


State 59

   39 expression: expression DIV . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 86


State 60

   38 expression: expression MULT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 87


State 61

   15 statement: expression ';' .

    $default  reduce using rule 15 (statement)


State 62

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   43           | IDENTIFIER '=' expression .
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60

    $default  reduce using rule 43 (expression)


State 63

   34 expression: IDENTIFIER '(' ')' .

    $default  reduce using rule 34 (expression)


State 64

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression
   53 args: expression .

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60

    $default  reduce using rule 53 (args)


State 65

   35 expression: IDENTIFIER '(' args . ')'
   54 args: args . ',' expression

    ')'  shift, and go to state 88
    ','  shift, and go to state 89


State 66

   20 statement: RETURN expression ';' .

    $default  reduce using rule 20 (statement)


State 67

   26 if_statement: IF '(' expression . ')' statement
   27             | IF '(' expression . ')' statement ELSE statement
   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60
    ')'     shift, and go to state 90


State 68

   28 while_statement: WHILE '(' expression . ')' statement
   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    OR      shift, and go to state 49
    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60
    ')'     shift, and go to state 91


State 69

   29 do_while_statement: DO statement WHILE . '(' expression ')'

    '('  shift, and go to state 92


State 70

   42 expression: '(' expression ')' .

    $default  reduce using rule 42 (expression)


State 71

   25 compound_statement: '{' statement_list '}' .

    $default  reduce using rule 25 (compound_statement)


State 72

   31 statement_list: statement_list statement .

    $default  reduce using rule 31 (statement_list)


State 73

    6 compile_unit: compile_unit declaration ';' .

    $default  reduce using rule 6 (compile_unit)


State 74

   12 declaration: type_specifier IDENTIFIER '=' . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 10
    MINUS       shift, and go to state 11
    PLUS        shift, and go to state 12
    NOT         shift, and go to state 13
    '('         shift, and go to state 15

    expression  go to state 93


State 75

    7 function_definition: type_specifier IDENTIFIER '(' . fargs ')' compound_statement
    8                    | type_specifier IDENTIFIER '(' . ')' compound_statement

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    ')'    shift, and go to state 94

    fargs           go to state 95
    declaration     go to state 96
    type_specifier  go to state 97


State 76

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   45           | expression OR expression .
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    AND     shift, and go to state 50
    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60

    $default  reduce using rule 45 (expression)


State 77

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   44           | expression AND expression .
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 51
    EQUAL   shift, and go to state 52
    LTE     shift, and go to state 53
    LT      shift, and go to state 54
    GTE     shift, and go to state 55
    GT      shift, and go to state 56
    MINUS   shift, and go to state 57
    PLUS    shift, and go to state 58
    DIV     shift, and go to state 59
    MULT    shift, and go to state 60

    $default  reduce using rule 44 (expression)


State 78

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression
   52           | expression NEQUAL expression .

    MINUS  shift, and go to state 57
    PLUS   shift, and go to state 58
    DIV    shift, and go to state 59
    MULT   shift, and go to state 60

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 52 (expression)


State 79

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   51           | expression . EQUAL expression
   51           | expression EQUAL expression .
   52           | expression . NEQUAL expression

    MINUS  shift, and go to state 57
    PLUS   shift, and go to state 58
    DIV    shift, and go to state 59
    MULT   shift, and go to state 60

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 51 (expression)


State 80

   36 expression: expression . PLUS expression
   37           | expression . MINUS expression
   38           | expression . MULT expression
   39           | expression . DIV expression
   44           | expression . AND expression
   45           | expression . OR expression
   47           | expression . GT expression
   48           | expression . GTE expression
   49           | expression . LT expression
   50           | expression . LTE expression
   50           | expression LTE expression .
   51           | expression . EQUAL expression
   52           | expression . NEQUAL expression

    MINUS  shift, and go to state 57
    PLUS   shift, and go to state 58
    DIV    shift, and go to state 59
    MULT   shift, and go to state 60

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LTE     error (nonassociative)
    LT      error (nonassociative)
    GTE     error (nonassociative)
    GT      error (nonassociative)

    $default  reduce using rule 50 (expression)


State 81
